# vgmstream-rs

./: .gitignore  .gitmodules  Cargo.toml
src/: constants.rs  decode.rs  formats.rs  lib.rs  mixing.rs  render.rs  streamfile.rs  vgmstream.rs  vgmstream_types.rs
src/coding/: adx.rs  coding.rs  ffmpeg.rs  ffmpeg_opus.rs  mod.rs  pcm_decoder.rs  vorbis.rs
src/layout/: blocked.rs  flat.rs  interleave.rs  mod.rs  segmented.rs
src/meta/: adx.rs  mod.rs  wwise.rs
src/util/: mod.rs  reader.rs  util.rs
test_data/adx/: mono.adx
test_data/wem/: 474329706.wem
