[package]
name = "vgmstream-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2"
aotuv_lancer_vorbis_sys = "0.1.3"
ogg_next_sys = "0.1.2"
rsmpeg = "0.14"


#aotuv_lancer_vorbis_sys = { version = "0.1.1", path = "depend/aotuv_lancer_vorbis_sys" }
#ogg_next_sys = { version = "0.1.2", path = "depend/ogg_next_sys" }


#vorbis_rs = "0.5.2"

# ffmpeg-next = {version = "6.0.0", features = ["codec","format"] }
# vorbis_rs = "0.5.0"
